# Date_001

./: CMakeLists.txt  README.md  SECURITY.md  main.cpp  test_includes.tdd  test_main.cpp
source/: catch.hpp  catch2.h  j5c_date.cpp  j5c_date.h  j5c_date_static_values.hsv
test/days/: get_day_of_year_2017.tdd  get_day_of_year_2020.tdd  test_add_days_neg_0001_2190.tdd  test_add_days_neg_0001_3653.tdd  test_add_days_pos_0001_2190.tdd  test_add_days_pos_0001_3652.tdd  test_dayGetText.tdd  test_getFirstDayOfYear.tdd  test_isValid_2017_negative.tdd  test_isValid_2017_positive.tdd  test_isValid_2020_negative.tdd  test_isValid_2020_positive.tdd
test/quarter/: get_day_of_quarter_2017.tdd  get_day_of_quarter_2020.tdd  get_quarter_2017.tdd  get_quarter_2020.tdd
test/year/: test_leap_year_0001_0500.tdd  test_leap_year_0501_1000.tdd  test_leap_year_1001_1500.tdd  test_leap_year_1501_2000.tdd  test_leap_year_2001_2500.tdd  test_leap_year_2501_3000.tdd  test_leap_year_3001_3500.tdd  test_leap_year_3501_4000.tdd  test_leap_year_4001_4500.tdd  test_leap_year_4501_5000.tdd  test_leap_year_5001_5500.tdd  test_leap_year_5501_6000.tdd  test_leap_year_6001_6500.tdd  test_leap_year_6501_7000.tdd  test_leap_year_7001_7500.tdd  test_leap_year_7501_8000.tdd  test_leap_year_8001_8500.tdd  test_leap_year_8501_9000.tdd  test_leap_year_9001_9500.tdd  test_leap_year_9501_9999.tdd
test/z_operator/: operators.tdd
